# Apex-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.githooks/: prepare-commit-msg
.github/workflows/: build.yml  pr.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
config/: eval.yaml  retrieval.yaml
data/: eval_baseline.json  eval_golden.json
data/eval_runs/: benchmark_1779428153.json
data/sample_docs/: README.md  sample_apex_legal_memo.txt  sample_brown_excerpt.txt  sample_marbury_excerpt.txt
docs/: PROJECT_DESCRIPTION.md  architecture.md  benchmark.md  blog_post.md  case_study.md  consulting_timeline.md  demo_script.md  runbook.md  sprint_updates.md
docs/adr/: 0001-pgvector-vs-weaviate.md  0002-rrf-fusion.md  0003-cross-encoder-rerank.md  0004-langgraph-vs-llamaindex.md  0005-three-api-surfaces.md  0006-local-ollama-default.md
infra/terraform/: README.md  ecs.tf  main.tf  postgres.tf  route53.tf  vpc.tf
notebooks/: README.md  benchmark_report.ipynb
proto/: apex.proto
scripts/: pull_models.ps1  pull_models.sh  setup-git-hooks.ps1  setup-git-hooks.sh  setup.ps1  setup.sh  validate_alembic.py
src/apex/: __init__.py  cli.py  db.py  logging_config.py  schemas.py  settings.py
src/apex/agent/: __init__.py  deep_research.py  graph.py  prompts.py  router.py  tools.py
src/apex/api/: __init__.py  apex_pb2.py  apex_pb2_grpc.py  audit.py  backpressure.py  dedup.py  degraded.py  graphql_schema.py  grpc_server.py  main.py  middleware.py  rest.py
src/apex/chunking/: __init__.py  multimodal.py
src/apex/embedding/: __init__.py  image.py  text.py
src/apex/eval/: __init__.py  drift.py  phoenix_setup.py  ragas_runner.py  regression_guard.py
src/apex/feedback/: __init__.py  human_loop.py
src/apex/ingest/: __init__.py  audio.py  image.py  pdf.py  pipeline.py  video.py
src/apex/llm/: __init__.py  ollama_client.py
src/apex/retrieval/: __init__.py  adaptive.py  contextual.py  hybrid.py  pipeline.py  query_rewrite.py  rerank.py  store_factory.py  vector_store.py
src/apex/safety/: __init__.py  citation.py  nli.py  pii_redact.py
src/apex/scripts/: __init__.py  benchmark.py  demo.py  download_demo_corpus.py  hnsw_tune.py  quantize_embeddings.py
tests/: conftest.py  fakes.py  test_adaptive.py  test_agent_flow.py  test_api_endpoints.py  test_api_smoke.py  test_audit_log.py  test_backpressure.py  test_benchmark.py  test_chunking.py  test_citation.py  test_cli.py  test_dedup.py  test_degraded.py  test_drift_and_eval.py  test_eval_golden_schema.py  test_feedback_export.py  test_graphql_runtime.py  test_graphql_schema.py  test_grpc_integration.py  test_hybrid_pipeline.py  test_ingest_pipeline.py  test_middleware_jwt_rate_limit.py  test_multi_tenant_isolation.py  test_nli_helpers.py  test_ollama_client.py  test_pii_redact.py  test_quantization.py  test_query_rewrite.py  test_router.py  test_router_advanced.py  test_rrf.py  test_schemas.py  test_settings.py  test_tools.py
ui/: streamlit_app.py
ui/app/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
ui/app/app/: globals.css  layout.tsx  page.tsx
ui/app/app/admin/: page.tsx
ui/app/app/chat/: page.tsx
ui/app/app/eval/: page.tsx
ui/app/components/: Header.tsx  ResultCard.tsx  Sidebar.tsx
ui/app/lib/: api.ts
vector_db/pgvector/: __init__.py  init.sql  schema.sql  store.py
vector_db/weaviate/: __init__.py  store.py
(+1 files in other folders)
