[project]
name = "apex-rag"
version = "0.1.0"
description = "Apex RAG: Multi-Modal Enterprise Search with Consulting Narrative"
authors = [{ name = "Apex RAG Team" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }

dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "httpx>=0.27.0",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "numpy>=1.26.4,<2",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
ingest = [
    "unstructured[pdf]>=0.14.0",
    "pypdf>=4.2.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.3.0",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.10.0.84",
    "scenedetect[opencv]>=0.6.4",
    "ffmpeg-python>=0.2.0",
    "faster-whisper>=1.0.2",
    "pyannote.audio>=3.3.0",
    "open-clip-torch>=2.24.0",
    "sentence-transformers>=3.0.1",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "torchaudio>=2.2.2",
    "transformers>=4.42.0",
    "accelerate>=0.31.0",
]
retrieval = [
    "pgvector>=0.3.0",
    "psycopg[binary,pool]>=3.1.19",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "weaviate-client>=4.6.5",
    "rank-bm25>=0.2.2",
]
agent = [
    "langgraph>=0.1.5",
    "langchain>=0.2.6",
    "langchain-core>=0.2.10",
    "langchain-community>=0.2.6",
    "langchain-ollama>=0.1.0",
    "ollama>=0.2.1",
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",
    "grpcio>=1.64.1",
    "grpcio-tools>=1.64.1",
    "protobuf>=5.27.1",
    "strawberry-graphql[fastapi]>=0.235.0",
    "redis[hiredis]>=5.0.6",
    "pybreaker>=1.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]
eval = [
    "ragas>=0.1.10",
    "arize-phoenix>=4.6.0",
    "datasets>=2.20.0",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "jupyterlab>=4.2.2",
    "nbformat>=5.10.4",
]
safety = [
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
    "spacy>=3.7.5",
]
ui = [
    "streamlit>=1.36.0",
]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "nbstripout>=0.7.1",
    "pre-commit>=3.7.1",
    "types-pyyaml>=6.0.12",
]
all = [
    "apex-rag[ingest,retrieval,agent,api,eval,safety,ui,dev]",
]

[project.scripts]
apex = "apex.cli:app"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apex"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["ui/app", "data", "notebooks", "infra/terraform"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
exclude = ["ui/app", "notebooks", "infra/terraform"]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests requiring heavy models (deselect with -m 'not slow')",
    "integration: requires docker-compose services running",
    "grpc_integration: requires live gRPC server (make api-grpc)",
]

[tool.coverage.run]
source = ["src/apex"]
omit = ["src/apex/api/grpc_pb2*.py", "src/apex/api/grpc_pb2_grpc.py"]
